--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -23,9 +23,9 @@
 
             <div class="toggle">
                 <ul>
-                    <li><a href="#" class="menu_item">Каталог</a></li>
-                    <li><a href="#" class="menu_item">Продажа</a></li>
-                    <li><a href="#" class="menu_item">Коммерческая</a></li>
+                    <li><a href="Catalog.html" class="menu_item">Каталог</a></li>
+                    <li><a href="Sales.html" class="menu_item">Продажа</a></li>
+                    <li><a href="Commercial.html" class="menu_item">Коммерческая</a></li>
                 </ul>
             </div>
             <div class="toggle_icon">
