--- a/Authorization.html
+++ b/Authorization.html
@@ -19,12 +19,11 @@
 <div class="content_account">
     <form action="include_db/Account.php" method="post" class="content_banner_account">
         <div class="text_account">
-            <p>Регистрация</p>
+            <p>Вход</p>
         </div>
         <input type="email" name="email_id" placeholder="Email" id="email">
-        <input type="email" name="username" placeholder="Email" id="username">
         <input type="password" name="password" placeholder="Пароль" id="password">
-        <button class="registration_account" type="submit">Регистрация</button>
+        <button class="enter_account" type="submit">Войти</button>
         <div class="line">
             <div class="line1"></div>
             <p>или</p>
