--- a/Authorization.html
+++ b/Authorization.html
@@ -17,7 +17,7 @@
     <a href="index.html" class="logo">Apart Flat</a>
 </header>
 <div class="content_account">
-    <form action="include_db/Account.php" method="post" class="content_banner_account">
+    <form action="include_db/auth.php" method="post" class="content_banner_account">
         <div class="text_account">
             <p>Вход</p>
         </div>
