--- a/Catalog.html
+++ b/Catalog.html
@@ -32,8 +32,8 @@
         </ul>
     </div>
     <div class="account_button">
-        <a href="Account.html" class="sign_in">ВОЙТИ</a>
-        <a href="Account.html">РЕГИСТРАЦИЯ</a>
+        <a href="Registration.html" class="sign_in">ВОЙТИ</a>
+        <a href="Registration.html">РЕГИСТРАЦИЯ</a>
     </div>
 </header>
 <div class="text__banner">
