--- a/Registration.html
+++ b/Registration.html
@@ -22,7 +22,7 @@
             <p>Регистрация</p>
         </div>
         <input type="email" name="email_id" placeholder="Email" id="email">
-        <input type="email" name="username" placeholder="Email" id="username">
+        <input type="text" name="username" placeholder="Создайте свой ник" id="username">
         <input type="password" name="password" placeholder="Пароль" id="password">
         <button class="registration_account" type="submit">Регистрация</button>
         <div class="line">
